@startuml

class User {
}

User <|-- Parent
User <|-- Professeur
User <|-- Admin

class Parent {
    - nom: CharField
    - prenom: CharField
    - numero_telephone: CharField
    - adresse: CharField
    - cree_le: DateTimeField
    - modifie_le: DateTimeField
    utilisateur: User
    commentaires_parent: CommentaireCours
    discussions_avec_admin: DiscussionParentAdmin
}

class Professeur {
    - nom: CharField
    - prenom: CharField
    - cree_le: DateTimeField
    - modifie_le: DateTimeField
    utilisateur: User
    cours: Cours
    commentaires_professeur: CommentaireCours
    discussions_avec_admin: DiscussionProfAdmin
}

class Admin {
    discussions_avec_parent: DiscussionParentAdmin
    discussions_avec_prof: DiscussionProfAdmin
}

class Matiere {
    - nom: CharField
    - description: TextField
    professeurs: Professeur
    commentaires: CommentaireCours
    cours: Cours
}

class CommentaireCours {
    - contenu: TextField
    - date: DateTimeField
    professeur: Professeur
    parent: Parent
    matiere: Matiere
    cours: Cours
}

class Cours {
    - nom: CharField
    - description: TextField
    - date_debut: DateTimeField
    - date_fin: DateTimeField
    - est_annule: BooleanField
    matiere: Matiere
    professeur: Professeur
    commentaires: CommentaireCours
}

class DiscussionParentAdmin {
    - sujet: CharField
    - date_creation: DateTimeField
    - derniere_activite: DateTimeField
    parent: Parent
    admin: Admin
    messages: Message
}

class DiscussionProfAdmin {
    - sujet: CharField
    - date_creation: DateTimeField
    - derniere_activite: DateTimeField
    professeur: Professeur
    admin: Admin
    messages: Message
}

class Message {
    - contenu: TextField
    - date_envoi: DateTimeField
    discussion_parent_admin: DiscussionParentAdmin
    discussion_prof_admin: DiscussionProfAdmin
}

Professeur "1" ---> "*" Matiere
Matiere "1" ---> "*" Professeur

Professeur "1" ---> "*" CommentaireCours
Parent "1" ---> "*" CommentaireCours
Matiere "1" ---> "*" CommentaireCours
Cours "1" ---> "*" CommentaireCours

Professeur "1" ---> "*" Cours
Matiere "1" ---> "*" Cours
Cours "1" ---> "1" Professeur
Cours "1" ---> "1" Matiere

Admin "1" ---> "*" DiscussionParentAdmin
Parent "1" ---> "*" DiscussionParentAdmin
DiscussionParentAdmin "1" ---> "*" Message

Admin "1" ---> "*" DiscussionProfAdmin
Professeur "1" ---> "*" DiscussionProfAdmin
DiscussionProfAdmin "1" ---> "*" Message

Message "1" ---> "1" DiscussionParentAdmin
Message "1" ---> "1" DiscussionProfAdmin

@enduml